fgbm per-pos model

--- a/fetch_wnba.ipynb
+++ b/fetch_wnba.ipynb
@@ -63,7 +63,7 @@
     "            soup = BeautifulSoup(test_table,features=\"lxml\")\n",
     "            table_id = str(soup.find('table').get('id'))\n",
     "\n",
-    "            if table_id == ['team_and_opponent']:\n",
+    "            if table_id in ['wnba_playoffs','team_and_opponent']:\n",
     "                continue\n",
     "            soup.findAll('tr')\n",
     "\n",
