--- a/regress_WNBA.ipynb
+++ b/regress_WNBA.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('avg_stats.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df = pd.read_csv('big_stat.csv')#pd.read_csv('BBGM_League_7_all_seasons_Average_Stats.csv')\n",
+    "df = df[(df.G*df.MP > 100)]\n",
     "df.shape"
    ]
   },
