--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -15,7 +15,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "\n",
+    "from sklearn import neural_network\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn import feature_selection, model_selection\n",
+    "from sklearn import  multioutput\n",
+    "from sklearn import ensemble\n",
+    "from sklearn import svm"
    ]
   },
   {
@@ -28,7 +36,9 @@
     "df = pd.read_csv('FBGM_League_1_all_seasons_Average_Stats(1).csv')\n",
     "df.shape\n",
     "#df = df.sample(10000)\n",
-    "df"
+    "#['QB', 'OL', 'TE', 'DL', 'S', 'CB', 'WR', 'LB', 'RB', 'P', 'K']\n",
+    "df\n",
+    "unique_pos = df.Pos.unique()"
    ]
   },
   {
@@ -37,53 +47,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = df.iloc[:,105:]\n",
-    "X = df.iloc[:,11:103]\n",
-    "#y = y[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
-    "print(X.shape)\n",
-    "#X = X[(X['AST%'] >0) & (X['AST%'] < 100)]\n",
-    "print(X.shape)\n",
+    "replacement_player_mean_bs = {}\n",
+    "replacement_player_std_bs = {}\n",
+    "replacement_player_cov_bs = {}\n",
+    "replacement_player_mean_r = {}\n",
+    "replacement_player_std_r = {}\n",
+    "replacement_player_cov_r = {}\n",
     "\n",
-    "valid_col = [_ for _ in X.columns if not _ in ['Blk','FL', 'Pen', 'Yds.6','Lng.4', 'APY', 'AV']]\n",
-    "X = X[valid_col]\n",
-    "replacement_filter = (df.Salary >= 0.25) & (df.Salary < 1.0)\n",
-    "replacement_player_mean_bs = X[replacement_filter].mean()\n",
-    "replacement_player_std_bs = X[replacement_filter].std()\n",
-    "replacement_player_cov_bs = X[replacement_filter].cov()\n",
+    "clfs = {}\n",
+    "scalersX = {}\n",
+    "scalersY = {}\n",
+    "fexps = {}\n",
+    "for pos in unique_pos:\n",
+    "    y = df[df.Pos == pos].iloc[:,105:]\n",
+    "    X = df[df.Pos == pos].iloc[:,11:103]\n",
+    "    \n",
+    "    valid_col = [_ for _ in X.columns if not _ in ['Blk','FL', 'Pen', 'Yds.6','Lng.4', 'APY']]\n",
+    "    X = X[valid_col]\n",
+    "    replacement_filter = (df.Pos == pos) & (df.Salary >= 0.25) & (df.Salary < 1.0)\n",
+    "    replacement_player_mean_bs[pos] = X[replacement_filter].mean()\n",
+    "    replacement_player_std_bs[pos] = X[replacement_filter].std()\n",
+    "    replacement_player_cov_bs[pos] = X[replacement_filter].cov()\n",
     "\n",
-    "replacement_player_mean_r = y[replacement_filter].mean()\n",
-    "replacement_player_std_r = y[replacement_filter].std()\n",
-    "replacement_player_cov_r = y[replacement_filter].cov()\n",
-    "\n",
-    "\n",
-    "replacement_player_mean_r\n",
-    "\n",
-    "X.columns\n",
-    "#valid_col"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import neural_network\n",
-    "from sklearn import linear_model\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn import feature_selection, model_selection\n",
-    "from sklearn import  multioutput\n",
-    "from sklearn import ensemble\n",
-    "from sklearn import svm"
+    "    replacement_player_mean_r[pos] = y[replacement_filter].mean()\n",
+    "    replacement_player_std_r[pos] = y[replacement_filter].std()\n",
+    "    replacement_player_cov_r[pos] = y[replacement_filter].cov()\n",
+    "    \n",
+    "    fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
+    "    scalerX = preprocessing.StandardScaler()\n",
+    "    scalery = preprocessing.StandardScaler()\n",
+    "    prescale_X = scalerX.fit_transform(X)\n",
+    "    prescale_y = scalery.fit_transform(y)\n",
+    "    prescale_X = fexp.fit_transform(prescale_X)\n",
+    "    X_train, X_test, y_train, y_test = model_selection.train_test_split(prescale_X, prescale_y, test_size=0.25, random_state=42)\n",
+    "    \n",
+    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=5e-3))\n",
+    "    clf.fit(prescale_X,prescale_y)\n",
+    "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
+    "    print(pos,clf.score(prescale_X,prescale_y))\n",
+    "    clfs[pos] = clf\n",
+    "    scalersX[pos] = scalersX\n",
+    "    scalersY[pos] = scalery\n",
+    "    fexps[pos] = fexp"
    ]
   },
   {
@@ -111,72 +116,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prescale_X,oms,oss = get_norms(X)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fexp = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
-    "scalerX = preprocessing.StandardScaler()\n",
-    "scalery = preprocessing.StandardScaler()\n",
-    "prescale_X,oms,oss = get_norms(X)\n",
-    "prescale_X = scalerX.fit_transform(X)\n",
-    "prescale_y = scalery.fit_transform(y)\n",
-    "prescale_X = fexp.fit_transform(prescale_X)\n",
-    "X_train, X_test, y_train, y_test = model_selection.train_test_split(prescale_X, prescale_y, test_size=0.25, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trials = 1\n",
-    "clf2 = None\n",
-    "ts = []\n",
-    "for i in range(trials):\n",
-    "    #clf = neural_network.MLPRegressor((36,5,24,36),'tanh',solver='adam',max_iter=1000)\n",
-    "    #clf = neural_network.MLPRegressor((),'identity',solver='lbfgs',alpha=5e2,tol=1e-9)\n",
-    "    #clf = multioutput.MultiOutputRegressor(linear_model.SGDRegressor(penalty='l2',alpha=5e2,eta0=1e-6,tol=1e-12,max_iter=50,verbose=True))\n",
-    "    clf = multioutput.MultiOutputRegressor(linear_model.ElasticNet(alpha=1,l1_ratio=0.85))\n",
-    "    #clf = ensemble.ExtraTreesRegressor(8,criterion='mae',max_depth=3,verbose=1)\n",
-    "    #clf = multioutput.MultiOutputRegressor(svm.SVR())\n",
-    "    #clf.fit(X_train,y_train)\n",
-    "    #print(clf.score(X_train,y_train),clf.score(X_test,y_test))\n",
-    "    clf.fit(prescale_X,prescale_y)\n",
-    "    yt = scalery.inverse_transform(clf.predict(prescale_X))\n",
-    "    err = np.linalg.norm(yt-y)\n",
-    "    ts.append((err,clf))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ts = sorted(ts)[::1] # why not the biggest error\n",
-    "print(ts[0][0])\n",
-    "clf = ts[0][1]\n",
-    "clf.score(prescale_X,prescale_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "col_names = X.columns\n",
     "col_names = fexp.get_feature_names(X.columns)\n",
     "\n",
+    "pos = 'WR'\n",
+    "\n",
     "for i,c in enumerate(y.columns):\n",
-    "    coeffs = clf.estimators_[i].coef_ \n",
+    "    coeffs = clfs[pos].estimators_[i].coef_ \n",
     "    v = np.argsort(abs(coeffs))[::-1]\n",
     "    print(c)\n",
     "    coeffs2 = [(coeffs[i2],col_names[i2]) for i2 in v[:10]]\n",
@@ -206,8 +152,16 @@
     "all_tables = {}\n",
     "for ty in tyear: \n",
     "    all_tables[ty] = np.load('fb_tables_{}.pkl'.format(ty))\n",
-    "teams = all_tables[tyear[0]].keys()\n"
+    "teams = all_tables[tyear[0]].keys()\n",
+    "print(all_tables[CURRENT_YEAR]['nwe'].keys())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -256,7 +210,16 @@
     "                        tcs[i] = '.'.join(tsplit)\n",
     "                    else:\n",
     "                        tcs[i] += '.1'\n",
-    "            table_columns[(ty,team)][table_name] = tcs"
+    "            table_columns[(ty,team)][table_name] = tcs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player_stats[2018]['Matt Ryan']"
    ]
   },
   {
@@ -421,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lt = [\n",
+    "lt = [('AV','games_played_team'),\n",
     "      ('Cmp','passing'),('Att','passing'),('Pct','passing','Cmp%'),\n",
     "      ('Yds','passing'),('TD','passing'),('TD%','passing'),('Int','passing'),\n",
     "      ('Int%','passing'),('Lng','passing'),('Y/A','passing'),('AY/A','passing'),('QBRat','passing','Rate'),\n",
@@ -478,11 +441,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wt = stats['games_played_team'][0][4]\n",
+    "ht = stats['games_played_team'][0][5]\n",
+    "exp = stats['games_played_team'][0][8]\n",
+    "wt,ht,exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "player_vectors = []\n",
     "player_names = []\n",
     "player_years = []\n",
     "player_scales = []\n",
     "player_heights = []\n",
+    "player_weights = []\n",
+    "player_drafts = []\n",
     "player_ages = []\n",
     "player_teams = []\n",
     "player_pos = []\n",
@@ -501,7 +478,7 @@
     "                    pass\n",
     "                d[k] = 0 if SV == '' else SV\n",
     "            d['Pos'] = []\n",
-    "            for t in ['passing','defense','returns','kicking','rushing_and_receiving']:\n",
+    "            for t in ['passing','defense','returns','kicking','rushing_and_receiving','games_played_team']:\n",
     "                try:\n",
     "                    d['Age'] = int(float(stats[t][0][table_columns[(ty,team)][t].index('Age')]))\n",
     "                except:\n",
@@ -510,11 +487,19 @@
     "                    d['Pos'].append(stats[t][0][table_columns[(ty,team)][t].index('Pos')])\n",
     "                except:\n",
     "                    pass\n",
+    "            if 'games_played_team' not in stats:\n",
+    "                continue\n",
+    "            wt = stats['games_played_team'][0][4]\n",
+    "            ht = stats['games_played_team'][0][5]\n",
+    "            exp = stats['games_played_team'][0][8]\n",
     "            player_vectors.append([d[stat] for stat in X.columns])\n",
     "            player_names.append(name)\n",
     "            player_years.append(ty)\n",
     "            player_ages.append(d['Age'])\n",
     "            player_pos.append(d['Pos'])\n",
+    "            player_heights.append(ht)\n",
+    "            player_drafts.append(exp)\n",
+    "            player_weights.append(wt)\n",
     "\n",
     "            player_teams.append(team)\n",
     "        except Exception as e:\n",
@@ -546,7 +531,104 @@
    "outputs": [],
    "source": [
     "Xn = np.nan_to_num(np.array(player_vectors))\n",
-    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape"
+    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape\n",
+    "clf2 = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if clf2 is None:\n",
+    "    clf2 = linear_model.LogisticRegression()\n",
+    "    scalerX_pos_og = preprocessing.StandardScaler()\n",
+    "    scalerX_pos = preprocessing.StandardScaler()\n",
+    "\n",
+    "    fexp_pos = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
+    "    tmpX = df.iloc[:,11:103]\n",
+    "    tmpX = tmpX[valid_col]\n",
+    "\n",
+    "    clf2.fit(fexp_pos.fit_transform(scalerX_pos_og.fit_transform(tmpX)),df.Pos)\n",
+    "\n",
+    "\n",
+    "    Xn_scale = fexp_pos.transform(scalerX_pos.fit_transform(Xn))\n",
+    "    pred_pos = clf2.predict(Xn_scale)\n",
+    "    #print(clf2.score(Xn_scale,df.Pos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'QB', 'OL', 'TE', 'DL', 'S', 'CB', 'WR', 'LB', 'RB', 'P', 'K'\n",
+    "pos_mapping = {\n",
+    " 'LG':'OL',\n",
+    " 'RG':'OL',\n",
+    " 'CB':'CB',\n",
+    " 'LOLB':'LB',\n",
+    " 'RB':'RB',\n",
+    " 'FB':'RB',\n",
+    " 'K':'K',\n",
+    " 'C':'OL',\n",
+    " 'LCB':'CB',\n",
+    " 'RCB':'CB',\n",
+    " 'FS':'S',\n",
+    " 'RDT':'DL',\n",
+    " 'QB':'QB',\n",
+    " 'DL':'DL',\n",
+    " 'MLB':'LB',\n",
+    " 'WR':'WR',\n",
+    " 'S':'S',\n",
+    " 'SS':'S',\n",
+    " 'TE':'TE',\n",
+    " 'DT':'DL',\n",
+    " 'RILB':'LB',\n",
+    " 'T':'OL',\n",
+    " 'LDT':'DL',\n",
+    " 'P':'P',\n",
+    " 'LILB':'LB',\n",
+    " 'ROLB':'LB',\n",
+    " 'LB':'LB',\n",
+    " 'DB':'S',\n",
+    " 'DE':'DL',\n",
+    " 'NT':'DL'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "predicted_pos = []\n",
+    "for listed_p,model_p in zip(player_pos,pred_pos):\n",
+    "    possible_pos = [_.upper() for _ in listed_p if _ != '0.0']\n",
+    "    pposs = []\n",
+    "    for pos in list(possible_pos):\n",
+    "        if '/' in pos:\n",
+    "            pp = pos.split('/')\n",
+    "            for ppp in pp:\n",
+    "                pposs.append(ppp)\n",
+    "        else:\n",
+    "            pposs.append(pos)\n",
+    "    possible_pos = [pos_mapping[_] for _ in set(pposs)]\n",
+    "    #print(possible_pos,model_p)\n",
+    "    \n",
+    "    if model_p in possible_pos:\n",
+    "        true_p = model_p\n",
+    "    elif len(possible_pos) > 0:\n",
+    "        random.shuffle(possible_pos)\n",
+    "        true_p = possible_pos[0]\n",
+    "    else:\n",
+    "        true_p = model_p\n",
+    "    predicted_pos.append(true_p)\n",
+    "predicted_pos = np.array(predicted_pos)"
    ]
   },
   {
@@ -562,27 +644,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Xn = np.nan_to_num(np.array(player_vectors))\n",
-    "# tuned this to get roughly 8-12 players at 70 or above. Which seemed like normal for a league\n",
-    "scalerX2 = preprocessing.StandardScaler()#(quantile_range=(30.0, 70.0))\n",
-    "#scalerX2.fit(Xn[:first_n])\n",
-    "#scalerX2 = scalerX\n",
-    "Xn_s,oms2,oss2 = get_norms(Xn)\n",
+    "ratings = np.zeros((predicted_pos.shape[0],y.shape[1]))\n",
+    "for pos in unique_pos:\n",
     "\n",
-    "Xn_s =scalerX2.fit_transform(np.nan_to_num(Xn))\n",
-    "Xn_fs = fexp.transform(np.nan_to_num(Xn_s))\n",
-    "predict = clf.predict(Xn_fs)\n",
-    "ratings = np.nan_to_num(scalery.inverse_transform(predict))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v = X.mean(0)-Xn.mean(0)\n",
-    "v.sort_values()"
+    "    Xn = np.nan_to_num(np.array(player_vectors))[np.where(predicted_pos == pos)]\n",
+    "    # tuned this to get roughly 8-12 players at 70 or above. Which seemed like normal for a league\n",
+    "    scalerX2 = preprocessing.StandardScaler()#(quantile_range=(30.0, 70.0))\n",
+    "\n",
+    "    Xn_s =scalerX2.fit_transform(np.nan_to_num(Xn))\n",
+    "    Xn_fs = fexps[pos].transform(np.nan_to_num(Xn_s))\n",
+    "    predict = clfs[pos].predict(Xn_fs)\n",
+    "    est_ratings = np.nan_to_num(scalersY[pos].inverse_transform(predict))\n",
+    "    ratings[np.where(predicted_pos == pos)] = est_ratings\n"
    ]
   },
   {
@@ -661,41 +734,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'QB', 'OL', 'TE', 'DL', 'S', 'CB', 'WR', 'LB', 'RB', 'P', 'K'\n",
-    "pos_mapping = {\n",
-    " 'LG':'OL',\n",
-    " 'RG':'OL',\n",
-    " 'CB':'CB',\n",
-    " 'LOLB':'LB',\n",
-    " 'RB':'RB',\n",
-    " 'FB':'RB',\n",
-    " 'K':'K',\n",
-    " 'C':'OL',\n",
-    " 'LCB':'CB',\n",
-    " 'RCB':'CB',\n",
-    " 'FS':'S',\n",
-    " 'RDT':'DL',\n",
-    " 'QB':'QB',\n",
-    " 'DL':'DL',\n",
-    " 'MLB':'LB',\n",
-    " 'WR':'WR',\n",
-    " 'S':'S',\n",
-    " 'SS':'S',\n",
-    " 'TE':'TE',\n",
-    " 'DT':'DL',\n",
-    " 'RILB':'LB',\n",
-    " 'T':'OL',\n",
-    " 'LDT':'DL',\n",
-    " 'P':'P',\n",
-    " 'LILB':'LB',\n",
-    " 'ROLB':'LB',\n",
-    " 'LB':'LB',\n",
-    " 'DB':'S',\n",
-    " 'DE':'DL',\n",
-    " 'NT':'DL'\n",
-    "}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -734,14 +773,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if clf2 is None:\n",
-    "    valid_pos = df.Pos.unique()\n",
-    "    clf2 = linear_model.LogisticRegression()\n",
-    "    clf2.fit(X,df.Pos)\n",
-    "    pred_pos = clf2.predict(Xn)\n",
-    "    print(clf2.score(X,df.Pos))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -770,37 +802,39 @@
     "    #for t in ['hgt', 'stre', 'spd', 'jmp', 'endu', 'ins', 'dnk', 'ft', 'fg', 'tp', 'diq', 'oiq', 'drb', 'pss', 'reb']:\n",
     "    #    if not t in r_vec:\n",
     "    #        r_vec[t] = 50\n",
-    "    if True:\n",
-    "        try:\n",
-    "            possible_pos = [_.upper() for _ in player_pos[i] if _ != '0.0']\n",
-    "            pposs = []\n",
-    "            for pos in list(possible_pos):\n",
-    "                if '/' in pos:\n",
-    "                    pp = pos.split('/')\n",
-    "                    for ppp in pp:\n",
-    "                        pposs.append(ppp)\n",
-    "                else:\n",
-    "                    pposs.append(pos)\n",
-    "            possible_pos = [pos_mapping[_] for _ in set(pposs)]\n",
-    "            true_pos = list(set([_ for _ in possible_pos if _ in valid_pos]))\n",
-    "            random.shuffle(true_pos)\n",
-    "            r_vec['pos'] = true_pos[0]\n",
-    "            new_player['pos'] =true_pos[0]\n",
-    "            #print(set(true_pos))\n",
-    "        except:\n",
-    "            r_vec['pos'] = pred_pos[i]\n",
-    "            new_player['pos'] = pred_pos[i]\n",
-    "            #print(i,  player_pos[i])\n",
-    "            pass\n",
+    "\n",
+    "    true_pos = [predicted_pos[i]]\n",
+    "    r_vec['pos'] = true_pos[0]\n",
+    "    new_player['pos'] =true_pos[0]\n",
+    "    #print(set(true_pos))\n",
+    "\n",
     "\n",
     "    new_player['ratings'] = [r_vec]\n",
     "    age = player_ages[i]\n",
     "    new_player['born'] = {'year':2019-age,'loc':''}\n",
     "    new_player['tid'] = team_abbbrevs.index(player_teams[i])\n",
     "\n",
-    "    \n",
+    "    exp = player_drafts[i]\n",
+    "    try:\n",
+    "        exp = int(exp)\n",
+    "    except:\n",
+    "        exp = 0\n",
+    "    new_player['draft'] = {\"originalTid\": -1, \"pick\": 0, \"round\": 0, \"tid\": -1, \"year\": CURRENT_YEAR-exp}\n",
+    "    new_player['weight'] = int(float(player_weights[i]))\n",
+    "    ht = [int(_) for _ in player_heights[i].split('-')]\n",
+    "    hgt = ht[0]*12 + ht[1]\n",
+    "    #print(ht,hgt)\n",
+    "    new_player['hgt'] = int(hgt)#int(3.7*(hgt-66))\n",
+    "\n",
     "    gen_player.append(new_player)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
