--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -33,12 +33,12 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv('big_fbgm_stats.csv')\n",
-    "df = pd.read_csv('FBGM_League_1_all_seasons_Average_Stats(1).csv')\n",
-    "df.shape\n",
+    "#df = pd.read_csv('FBGM_League_1_all_seasons_Average_Stats(1).csv')\n",
     "#df = df.sample(10000)\n",
     "#['QB', 'OL', 'TE', 'DL', 'S', 'CB', 'WR', 'LB', 'RB', 'P', 'K']\n",
     "df\n",
-    "unique_pos = df.Pos.unique()"
+    "unique_pos = df.Pos.unique()\n",
+    "df.shape"
    ]
   },
   {
