--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -441,18 +441,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wt = stats['games_played_team'][0][4]\n",
-    "ht = stats['games_played_team'][0][5]\n",
-    "exp = stats['games_played_team'][0][8]\n",
-    "wt,ht,exp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "player_vectors = []\n",
     "player_names = []\n",
     "player_years = []\n",
@@ -649,7 +637,8 @@
     "\n",
     "    Xn = np.nan_to_num(np.array(player_vectors))[np.where(predicted_pos == pos)]\n",
     "    # tuned this to get roughly 8-12 players at 70 or above. Which seemed like normal for a league\n",
-    "    scalerX2 = preprocessing.StandardScaler()#(quantile_range=(30.0, 70.0))\n",
+    "    #scalerX2 = preprocessing.StandardScaler()#(quantile_range=(30.0, 70.0))\n",
+    "    scalerX2 = preprocessing.StandardScaler()\n",
     "\n",
     "    Xn_s =scalerX2.fit_transform(np.nan_to_num(Xn))\n",
     "    Xn_fs = fexps[pos].transform(np.nan_to_num(Xn_s))\n",
