--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -36,7 +36,7 @@
     "#df = pd.read_csv('FBGM_League_1_all_seasons_Average_Stats(1).csv')\n",
     "#df = df.sample(10000)\n",
     "#['QB', 'OL', 'TE', 'DL', 'S', 'CB', 'WR', 'LB', 'RB', 'P', 'K']\n",
-    "df\n",
+    "clf2 = None\n",
     "unique_pos = df.Pos.unique()\n",
     "df.shape"
    ]
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2018\n",
+    "GEN_YEAR = 2012\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -153,7 +153,7 @@
     "for ty in tyear: \n",
     "    all_tables[ty] = np.load('fb_tables_{}.pkl'.format(ty))\n",
     "teams = all_tables[tyear[0]].keys()\n",
-    "print(all_tables[CURRENT_YEAR]['nwe'].keys())"
+    "print(all_tables[GEN_YEAR]['nwe'].keys())"
    ]
   },
   {
@@ -184,7 +184,7 @@
     "            #print(table.index)\n",
     "            for row in table.itertuples():\n",
     "                name = row[0]\n",
-    "                name = name.replace('\\xa0\\xa0',' ')\n",
+    "                name = name.replace('\\xa0\\xa0',' ').replace('*','').replace('+','')\n",
     "                if name == 'Team Totals':\n",
     "                    continue\n",
     "                nsplit = name.split(' ')\n",
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_stats[2018]['Matt Ryan']"
+    "#player_stats[2007].keys()"
    ]
   },
   {
@@ -375,7 +375,7 @@
    "outputs": [],
    "source": [
     "#'returns', 'kicking'\n",
-    "table_columns[(2018,'nwe')]['kicking']\n"
+    "#table_columns[(2018,'nwe')]['kicking']\n"
    ]
   },
   {
@@ -432,7 +432,7 @@
     "    #    l = list(locs['LowPostFGP'])\n",
     "    #    l[0] +=2\n",
     "    #    locs['MidRangeFGP'] = l\n",
-    "len(locs[(2018,'nwe')]),locs[(2018,'nwe')]"
+    "len(locs[(GEN_YEAR,'nwe')]),locs[(GEN_YEAR,'nwe')]"
    ]
   },
   {
@@ -507,7 +507,7 @@
    "outputs": [],
    "source": [
     "first_n = len([yr for yr in player_years if yr == tyear[0]])\n",
-    "gen_FA = len(teams)*5 if CURRENT_YEAR!=GEN_YEAR else 0\n",
+    "gen_FA = 0#len(teams)*5 if CURRENT_YEAR!=GEN_YEAR else 0\n",
     "first_n,len(teams),gen_FA\n",
     "#player_names"
    ]
@@ -519,8 +519,7 @@
    "outputs": [],
    "source": [
     "Xn = np.nan_to_num(np.array(player_vectors))\n",
-    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape\n",
-    "clf2 = None"
+    "#Xn.shape,Xn_s.shape,prescale_X.shape,fexp.n_input_features_,X.shape\n"
    ]
   },
   {
@@ -532,7 +531,6 @@
     "if clf2 is None:\n",
     "    clf2 = linear_model.LogisticRegression()\n",
     "    scalerX_pos_og = preprocessing.StandardScaler()\n",
-    "    scalerX_pos = preprocessing.StandardScaler()\n",
     "\n",
     "    fexp_pos = preprocessing.PolynomialFeatures(degree=1,interaction_only=False)\n",
     "    tmpX = df.iloc[:,11:103]\n",
@@ -540,9 +538,9 @@
     "\n",
     "    clf2.fit(fexp_pos.fit_transform(scalerX_pos_og.fit_transform(tmpX)),df.Pos)\n",
     "\n",
-    "\n",
-    "    Xn_scale = fexp_pos.transform(scalerX_pos.fit_transform(Xn))\n",
-    "    pred_pos = clf2.predict(Xn_scale)\n",
+    "scalerX_pos = preprocessing.StandardScaler()\n",
+    "Xn_scale = fexp_pos.transform(scalerX_pos.fit_transform(Xn))\n",
+    "pred_pos = clf2.predict(Xn_scale)\n",
     "    #print(clf2.score(Xn_scale,df.Pos))"
    ]
   },
@@ -583,7 +581,11 @@
     " 'LB':'LB',\n",
     " 'DB':'S',\n",
     " 'DE':'DL',\n",
-    " 'NT':'DL'\n",
+    " 'NT':'DL',\n",
+    " 'RT':'OL',\n",
+    " 'LT': 'OL',\n",
+    " 'SE': 'WR',\n",
+    " 'FL': 'WR'\n",
     "}"
    ]
   },
@@ -653,7 +655,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tables[2018]['nwe'].keys()\n",
+    "#all_tables[2018]['nwe'].keys()\n",
     "#'logo', 'name', 'conf'"
    ]
   },
@@ -800,7 +802,7 @@
     "\n",
     "    new_player['ratings'] = [r_vec]\n",
     "    age = player_ages[i]\n",
-    "    new_player['born'] = {'year':2019-age,'loc':''}\n",
+    "    new_player['born'] = {'year':GEN_YEAR-age,'loc':''}\n",
     "    new_player['tid'] = team_abbbrevs.index(player_teams[i])\n",
     "\n",
     "    exp = player_drafts[i]\n",
@@ -810,11 +812,13 @@
     "        exp = 0\n",
     "    new_player['draft'] = {\"originalTid\": -1, \"pick\": 0, \"round\": 0, \"tid\": -1, \"year\": CURRENT_YEAR-exp}\n",
     "    new_player['weight'] = int(float(player_weights[i]))\n",
-    "    ht = [int(_) for _ in player_heights[i].split('-')]\n",
-    "    hgt = ht[0]*12 + ht[1]\n",
-    "    #print(ht,hgt)\n",
-    "    new_player['hgt'] = int(hgt)#int(3.7*(hgt-66))\n",
-    "\n",
+    "    try:\n",
+    "        ht = [int(_) for _ in player_heights[i].split('-')]\n",
+    "        hgt = ht[0]*12 + ht[1]\n",
+    "        #print(ht,hgt)\n",
+    "        new_player['hgt'] = int(hgt)#int(3.7*(hgt-66))\n",
+    "    except:\n",
+    "        pass\n",
     "    gen_player.append(new_player)\n"
    ]
   },
