--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -142,13 +142,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2012\n",
+    "GEN_YEAR = 2019\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
     "#    raise\n",
     "\n",
-    "CURRENT_YEAR = 2018\n",
+    "#CURRENT_YEAR = 2019\n",
     "all_tables = {}\n",
     "for ty in tyear: \n",
     "    all_tables[ty] = np.load('fb_tables_{}.pkl'.format(ty))\n",
@@ -585,7 +585,19 @@
     " 'RT':'OL',\n",
     " 'LT': 'OL',\n",
     " 'SE': 'WR',\n",
-    " 'FL': 'WR'\n",
+    " 'FL': 'WR',\n",
+    " 'OLB':'LB',\n",
+    " 'DE ': 'DL',\n",
+    " 'OT': 'OL',\n",
+    " 'OL': 'OL',\n",
+    " 'LS': 'OL',\n",
+    " 'ILB':'LB',\n",
+    " 'G':'OL',\n",
+    " 'OG':'OL',\n",
+    " 'EDGE':'DL',\n",
+    " 'G,T': 'OL',\n",
+    " 'LS,TE': 'TE'\n",
+    "\n",
     "}"
    ]
   },
@@ -607,7 +619,7 @@
     "                pposs.append(ppp)\n",
     "        else:\n",
     "            pposs.append(pos)\n",
-    "    possible_pos = [pos_mapping[_] for _ in set(pposs)]\n",
+    "    possible_pos = [pos_mapping[_.replace(' ','')] for _ in set(pposs)]\n",
     "    #print(possible_pos,model_p)\n",
     "    \n",
     "    if model_p in possible_pos:\n",
@@ -810,7 +822,7 @@
     "        exp = int(exp)\n",
     "    except:\n",
     "        exp = 0\n",
-    "    new_player['draft'] = {\"originalTid\": -1, \"pick\": 0, \"round\": 0, \"tid\": -1, \"year\": CURRENT_YEAR-exp}\n",
+    "    new_player['draft'] = {\"originalTid\": -1, \"pick\": 0, \"round\": 0, \"tid\": -1, \"year\": GEN_YEAR-exp}\n",
     "    new_player['weight'] = int(float(player_weights[i]))\n",
     "    try:\n",
     "        ht = [int(_) for _ in player_heights[i].split('-')]\n",
