who knows the 90s

--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 2019\n",
+    "GEN_YEAR = 1992\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
@@ -596,7 +596,14 @@
     " 'OG':'OL',\n",
     " 'EDGE':'DL',\n",
     " 'G,T': 'OL',\n",
-    " 'LS,TE': 'TE'\n",
+    " 'LS,TE': 'TE',\n",
+    "  'PR':'WR',\n",
+    "  'KR':'WR',\n",
+    "'RDE':'DL',\n",
+    "    'LDE':'DL',\n",
+    "        'RLB':'LB',\n",
+    "            'LLB':'LB'\n",
+    "\n",
     "\n",
     "}"
    ]
@@ -668,7 +675,15 @@
    "outputs": [],
    "source": [
     "#all_tables[2018]['nwe'].keys()\n",
-    "#'logo', 'name', 'conf'"
+    "#'logo', 'name', 'conf'\n",
+    "teams2 = []\n",
+    "for t in teams:\n",
+    "    try:\n",
+    "        aaaa = all_tables[GEN_YEAR][t]['conf'][:-9]\n",
+    "        teams2.append(t)\n",
+    "    except:\n",
+    "        pass\n",
+    "teams = teams2"
    ]
   },
   {
@@ -704,7 +719,8 @@
     "    t['name'] = nsplit[-1]\n",
     "    t['imgURL'] = all_tables[GEN_YEAR][t1]['logo']\n",
     "    t['tid'] = i \n",
-    "    t['did'] = divs.index(all_tables[GEN_YEAR][t1]['conf'][:9].rstrip())\n",
+    "    div_name = all_tables[GEN_YEAR][t1]['conf'].rstrip().split(' ')\n",
+    "    t['did'] = divs.index(' '.join(div_name[:-1]))\n",
     "    t['cid'] = [c in all_tables[GEN_YEAR][t1]['conf'] for c in confs].index(True)\n",
     "    new_teams.append(t)\n",
     "print(new_teams)\n",
