whatever that is

--- a/regress_WAR.ipynb
+++ b/regress_WAR.ipynb
@@ -347,7 +347,7 @@
     "new_ovr = np.array(new_ovr)\n",
     "plt.hist(new_ovr,100)\n",
     "plt.hist(pred*SS+MM,100,alpha=0.5)\n",
-    "plt.ylim(0,50)\n",
+    "#plt.ylim(0,50)\n",
     "new_ovr.mean(),new_ovr.std(),coeff"
    ]
   },
@@ -458,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(6,6))\n",
+    "plt.figure(figsize=(6,6),facecolor='w',edgecolor='w')\n",
     "plt.scatter(pdf['ovr_og'],pdf['ovr_mn'],s=11,alpha=0.7)\n",
     "#plt.scatter(new_ovr,pred*(SS)+MM+0.5,s=3,alpha=0.1)\n",
     "\n",
@@ -467,7 +467,7 @@
     "plt.ylim(30,75)\n",
     "plt.xlabel('old rating')\n",
     "plt.ylabel('new rating')\n",
-    "plt.title(\"Rating change on 18-19 NBA Roster data\")\n",
+    "plt.title(\"Rating change on nicidob 18-19 NBA Roster data\")\n",
     "plt.plot([30,75],[30,75],c='k')\n",
     "plt.grid(True)"
    ]
