--- a/regress_fbgm.ipynb
+++ b/regress_fbgm.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('big_fbgm_stats.csv')\n",
+    "df = pd.read_csv('new_big_fbgm.csv')\n",
     "#df = pd.read_csv('FBGM_League_1_all_seasons_Average_Stats(1).csv')\n",
     "#df = df.sample(10000)\n",
     "#['QB', 'OL', 'TE', 'DL', 'S', 'CB', 'WR', 'LB', 'RB', 'P', 'K']\n",
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEN_YEAR = 1992\n",
+    "GEN_YEAR = 2007\n",
     "tyear = [GEN_YEAR]\n",
     "#if tyear[0] < 1980:\n",
     "#    print(\"MY PARSING OF THE TABLES IS WRONG WITHOUT the 2PA/3PA TRACKS\")\n",
